# trifinger_IL

./: README.md
act/: .gitignore  (+5 more)
trifingermujocoenv/: setup.cfg
trifingermujocoenv/demo/: inverse_kinematics.py  move_cube.py  render_episodes_human.py  render_episodes_rgb.py
trifingermujocoenv/trifinger_mujoco_env/: __init__.py  env.py  move_cube_env.py  utils.py
trifingermujocoenv/trifinger_mujoco_env/assets/: colored_cube.stl  convex_decomp_barrierpart_001.stl  convex_decomp_barrierpart_002.stl  convex_decomp_barrierpart_003.stl  convex_decomp_barrierpart_004.stl  convex_decomp_barrierpart_005.stl  convex_decomp_barrierpart_006.stl  convex_decomp_barrierpart_007.stl  convex_decomp_barrierpart_008.stl  convex_decomp_barrierpart_009.stl  convex_decomp_barrierpart_010.stl  convex_decomp_barrierpart_011.stl  convex_decomp_barrierpart_012.stl  convex_decomp_barrierpart_013.stl  convex_decomp_barrierpart_014.stl  convex_decomp_barrierpart_015.stl  convex_decomp_barrierpart_016.stl  convex_decomp_barrierpart_017.stl  convex_decomp_barrierpart_018.stl  convex_decomp_barrierpart_019.stl  convex_decomp_barrierpart_020.stl  convex_decomp_barrierpart_021.stl  convex_decomp_barrierpart_022.stl  convex_decomp_barrierpart_023.stl  convex_decomp_barrierpart_024.stl  convex_decomp_barrierpart_025.stl  convex_decomp_barrierpart_026.stl  convex_decomp_barrierpart_027.stl  convex_decomp_barrierpart_028.stl  convex_decomp_barrierpart_029.stl  convex_decomp_barrierpart_030.stl  convex_decomp_barrierpart_031.stl  convex_decomp_barrierpart_032.stl  convex_decomp_barrierpart_033.stl  (+7 more)
(+78 files in other folders)
