[metadata]
name = trifinger_mujoco_env
version = attr: trifinger_mujoco_env.__version__
description = Gym environments simulating the TriFinger robot in MuJoCo.
long_description = file: README.md
long_description_content_type = text/markdown
author = Nico Gürtler
author_email = nico.guertler@tuebingen.mpg.de
keywords =
    robotics
    TriFinger
    Real Robot Challenge
    dexterous manipulation
license = BSD 3-Clause

[options]
packages = find:
install_requires = 
    numpy
    gymnasium
    mujoco
    numpy-quaternion

[options.package_data]
trifinger_mujoco_env = py.typed
trifinger_mujoco_env.assets =
    *.xml
    *.stl
